# face-deid-emotion-metrics

./: .gitignore  README.md  face_deid_emotion_metrics_handover_20251114.txt  pyproject.toml  requirements.txt
docs/: spec.md  wsl.md  wsl_gpu_setup.md
scripts/: deid.ps1  install_decord_gpu.ps1  install_deid_alias.ps1  run_rapa.ps1  run_rapa_wsl.ps1
scripts/wsl/: run_pipeline.sh  setup_env.sh  verify_gpu_decode.py
src/face_deid_emotion_metrics/: __init__.py  cli.py  config.py  excel_writer.py  models_emotion.py  models_face.py  pipeline.py  profiling.py  sample_workbook.py  video_reader.py
