[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "face-deid-emotion-metrics"
version = "0.1.0"
description = "Face de-identification and emotion similarity metrics pipeline"
readme = "README.md"
authors = [{ name = "face-deid-emotion-metrics" }]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
